# robotics-projects-2021

./: .gitignore  README.md  instructions.txt
first project/project/: package.xml
first project/project/launch/: bag.launch
first project/project/src/: params.cpp  pub_odom.cpp  pub_twist.cpp  set_client.cpp
main/: CMakeLists.txt  package.xml
main/src/: calibration.cpp  param.cpp  sub.cpp
project/: CMakeLists.txt  package.xml
project/cfg/: parameters.cfg
project/launch/: bag.launch  launcher.launch  rqt.launch
project/src/: calibration.cpp  data.h  param.cpp  params.cpp  pub_odom.cpp  pub_twist.cpp  pub_twist_old.cpp  reset_client.cpp  set_client.cpp  sub.cpp  tf.cpp
second project/: .gitignore  README.md  instructions.txt
second project/project/: CMakeLists.txt  package.xml
second project/project/launch/: amcl.launch  ekf.launch  gmapping_camera.launch  gmapping_scout.launch
second project/project/maps/: gmap.pgm  gmap.yaml
second project/project/params/: navsat_transform_param.yaml
second project/project/rviz/: amcl.rviz  ekf.rviz  gmapping_camera.rviz  gmapping_scout.rviz
second project/project/src/: conversion.cpp
test/: CMakeLists.txt  package.xml
test/src/: test_pub.cpp
