<?xml version="1.0"?>
<package format="2">
  <name>project</name>
  <version>0.0.0</version>
  <description>The project package</description>
  <maintainer email="alberto.pirillo@mail.polimi.it">Alberto Pirillo</maintainer>
  <author email="alberto.pirillo@mail.polimi.it">Alberto Pirillo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>robotics_hw1</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>robotics_hw1</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>

  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>robotics_hw1</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>

  </export>
</package>
